fixing text alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -73,3 +73,8 @@ body {
 .todo-list {
   padding-left: 0px;
 }
+
+.task-title {
+  text-align: left;
+  padding-left: 26px;
+}
